# iran_twitter_llm

./: test.ipynb  tweets-2.csv  tweets-3.csv  tweets.csv
c4ads-rag-iran-twitter/: .sample_env  README.md  app.py  docker-compose.yaml  get_csv_sample.py  ingest.Dockerfile  pyproject.toml  streamlit.Dockerfile  streamlit_client.py
c4ads-rag-iran-twitter/data/: first-100-rows.csv  first-20-rows.csv  tweets-1.csv  tweets.csv
c4ads-rag-iran-twitter/persist/: docstore.json
c4ads-rag-iran-twitter/utils/: clean_data.ipynb  csv_reader.py  retrievers.py
final_data/: from:NatlParkService (Bear OR Alaska OR Katmai)_tweets.csv
